--- a/package.json
+++ b/package.json
@@ -15,16 +15,11 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
-    "gulp-plumber": "^1.1.0",
     "gulp-rev": "^7.1.2",
-    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "lazypipe": "^1.0.1",
     "react": "^15.4.1",
-    "through2": "^2.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vinyl-transform": "^1.0.0"
+    "through2": "^2.0.3"
   }
 }
